# OCTRON-GUI

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  environment.yaml  environment_cuda.yaml  ffmpeg_windows.md  pyproject.toml
.github/workflows/: test_and_deploy.yml  tests.yml
octron/: __init__.py  _logging.py  analyze.py  cli.py  config.py  gui_dialog_elements.py  gui_elements.py  gui_tables.py  main.py  napari.yaml  predict.py  reader.py  test_gpu.py  train.py  url_check.py
octron/cotracker_octron/helpers/: build_cotracker.py  cotracker_checks.py  cotracker_layer.py  cotracker_layer_callback.py  cotracker_octron.py  cotracker_zarr.py  skeleton_definition.py
octron/notebooks/: OCTRON_YOLO_predict_advanced.ipynb  OCTRON_YOLO_predict_simple.ipynb  OCTRON_YOLO_render_simple.ipynb  OCTRON_annotation_loading.ipynb  OCTRON_predict_batch_standalone.ipynb  OCTRON_results_loading.ipynb  napari_yolo_prediction.ipynb
octron/qt_gui/: conversion_code_gui.py  octron.py  octron.ui  octron_corrected.py
octron/sam2_octron/: __init__.py  object_organizer.py
octron/sam2_octron/helpers/: build_sam2_octron.py  sam2_checks.py  sam2_layer.py  sam2_layer_callback.py  sam3_checks.py  sam3_octron.py
octron/sam_octron/: object_organizer.py  sam2_models.yaml  sam3_models.yaml
octron/sam_octron/helpers/: build_sam2_octron.py  build_sam3_octron.py  octron_colors.py  sam2_checks.py  sam2_colors.py  sam2_layer.py  sam2_layer_callback.py  sam2_octron.py  sam2_zarr.py  sam2hq_octron.py  sam3_checks.py  sam3_octron.py  sam_layer.py  sam_layer_callback.py  sam_zarr.py  video_loader.py
octron/tools/: __init__.py  _ffmpeg.py  export_tracking.py  mp4_to_gif.py  predict.py  render.py  split.py  train.py  transcode.py
octron/tracking/: boxmot_trackers.yaml  tracker_config_ui.py
octron/tracking/configs/: basetracker.yaml  hybridsort.yaml  strongsort.yaml
octron/tracking/helpers/: tracker_checks.py  tracker_vis.py
octron/video/: render.py
octron/yolo_octron/: constants.py  yolo_models.yaml  yolo_octron.py
octron/yolo_octron/gui/: region_props_dialog.py  yolo_handler.py
octron/yolo_octron/helpers/: cache_io.py  mask_interpolation.py  polygons.py  sam2_results.py  training.py  yolo_checks.py  yolo_plotting.py  yolo_results.py  yolo_zarr.py
tests/: conftest.py  test_cache_io.py  test_cli.py  test_config.py  test_export_tracking.py  test_ffmpeg_utils.py  test_predict_utils.py  test_render_utils.py  test_smooth_tracklets.py  test_split_utils.py  test_train_utils.py  test_transcode_utils.py  test_warning_filters.py  test_yolo_results_utils.py
tests/test_integration/: test_napari.py
tests/test_unit/: test_cache_io.py  test_config.py  test_cotracker_octron.py  test_ffmpeg_utils.py  test_predict_utils.py  test_split_utils.py  test_train_utils.py  test_transcode_utils.py  test_yolo_results_utils.py
