[project]
name = "octron"
authors = [{ name = "Horst A. Obenhaus", email = "hobenhaus@gmail.com" }]
description = "OCTRON - segmentation and tracking for animal behavior quantification"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dynamic = ["version"]

dependencies = [
    "setuptools",
    "napari==0.7.1",
    "numpy>=2.1.0",
    "qtpy>=2.4.3",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "tqdm>=4.67.1",
    "scipy>=1.15.1",
    "pandas>=2.2.3",
    "scikit-image>=0.25.0",
    "tifffile",
    "zarr==3.1.6",                                                                                                         # Newer versions require python version bump
    "kornia>=0.8.0",
    "cmasher>=1.9.2",
    "imantics",
    "ultralytics>=8.4.46",
    "tensorboard>=2.19.0",
    "lap>=0.5.12",
    "opencv-python>=4.11.0",
    "natsort>=8.4.0",
    "loguru>=0.7",
    "platformdirs>=4.0",
    "typer>=0.12.0",
    "huggingface_hub>=1.5.0",
    "transformers>=5.2.0",
    "napari-pyav @ https://github.com/horsto/napari-pyav/releases/download/v0.0.10.2/napari_pyav-0.0.10-py3-none-any.whl",
    "sam-2 @ https://github.com/horsto/sam2/releases/download/v0.0.2/sam_2-1.0-py3-none-any.whl",
    "boxmot @ https://github.com/horsto/boxmot/releases/download/v.15.0.5.2/boxmot-15.0.5-py3-none-any.whl",
    "timm>=1.0.25",
    "clip @ git+https://github.com/ultralytics/CLIP.git",
]

license = "GPL-3.0-or-later"
license-files = ["LICENSE"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Framework :: napari",
]

keywords = [
    "octron",
    "video segmentation",
    "napari",
    "object tracking",
    "behavior quantification",
    "machine learning",
    "sam",
    "yolo11",
]

[project.urls]
"Homepage" = "https://github.com/OCTRON-tracking/OCTRON-GUI"
"Bug Tracker" = "https://github.com/OCTRON-tracking/OCTRON-GUI/issues"
"Documentation" = "https://octron-tracking.github.io/OCTRON-docs/"
"Source Code" = "https://github.com/OCTRON-tracking/OCTRON-GUI"
"User Support" = "https://github.com/OCTRON-tracking/OCTRON-GUI/issues"
"Changelog" = "https://github.com/OCTRON-tracking/OCTRON-GUI/blob/main/CHANGELOG.md"

[project.optional-dependencies]
pyqt5 = ["PyQt5>=5.15.11"]
pyqt6 = ["PyQt6>=6.10.0"]
all = ["napari[pyqt6]==0.7.1"]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "coverage",
    "tox",
    "mypy",
    "pre-commit",
    "ruff",
    "setuptools-scm",
]

[project.entry-points."napari.manifest"]
octron = "octron:napari.yaml"

[project.entry-points."pipx.run"]
octron = "octron.cli:main"

[project.scripts]
octron = "octron.cli:main"

[build-system]
requires = ["setuptools>=77", "wheel", "setuptools-scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
[tool.setuptools.package-data]
"*" = ["*.yaml", "*.svg", "*.md"]

[tool.setuptools.packages.find]
include = ["octron*", "qt_gui"]
exclude = ["tests*", "pics", "sample_data"]

[tool.pytest.ini_options]
addopts = "--cov=octron"

[tool.setuptools_scm]
# write version into code for import
write_to = "octron/_version.py"
version_scheme = "post-release"
local_scheme = "no-local-version"


[tool.check-manifest]
ignore = [
  ".yaml",
  "tests/",
  "tests/test_unit/",
  "tests/test_integration/",
]

[tool.ruff] # same as https://github.com/neuroinformatics-unit/movement/
line-length = 79
exclude = ["__init__.py", "build", ".eggs"]
fix = true

[tool.ruff.lint]
# See https://docs.astral.sh/ruff/rules/
ignore = [
    "D203", # one blank line before class
    "D213", # multi-line-summary second line
]
select = [
    "E",      # pycodestyle errors
    "F",      # Pyflakes
    "UP",     # pyupgrade
    "I",      # isort
    "B",      # flake8 bugbear
    "SIM",    # flake8 simplify
    "TC",     # flake8 type-checking
    "C90",    # McCabe complexity
    "D",      # pydocstyle
    "NPY201", # checks for syntax that was deprecated in numpy2.0
]
per-file-ignores = { "tests/*" = [
    "D100", # missing docstring in public module
    "D205", # missing blank line between summary and description
    "D103", # missing docstring in public function
] }

[tool.ruff.format]
docstring-code-format = true # Also format code in docstrings

[tool.codespell]
skip = '.git'
check-hidden = true

[tool.tox]
legacy_tox_ini = """
[tox]
requires =
    tox>=4
    tox-gh-actions
envlist = py{311}
isolated_build = True

[gh-actions]
python =
    3.11: py311

[testenv]
passenv =
    CI
    GITHUB_ACTIONS
extras =
    dev
commands =
    pytest -v --color=yes --cov=octron --cov-report=xml
"""
